--- a/SPGLMM_case_study.ipynb
+++ b/SPGLMM_case_study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CNTSCHID</th>\n",
+       "      <th>CNT</th>\n",
+       "      <th>PRIVATESCH</th>\n",
+       "      <th>STRATIO</th>\n",
+       "      <th>SCHSIZE</th>\n",
+       "      <th>sum_MATHbelow</th>\n",
+       "      <th>mean_ESCS</th>\n",
+       "      <th>mean_ESCS_std</th>\n",
+       "      <th>Y_MATH</th>\n",
+       "      <th>Y_BIN_MATH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>800004</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>public</td>\n",
+       "      <td>9.7619</td>\n",
+       "      <td>205</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-1.152958</td>\n",
+       "      <td>-0.268234</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>800006</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>public</td>\n",
+       "      <td>18.0000</td>\n",
+       "      <td>315</td>\n",
+       "      <td>15</td>\n",
+       "      <td>-1.343747</td>\n",
+       "      <td>-0.565595</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>800007</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>public</td>\n",
+       "      <td>4.7368</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-2.401967</td>\n",
+       "      <td>-2.214922</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>800008</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>private</td>\n",
+       "      <td>13.8125</td>\n",
+       "      <td>221</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-0.135900</td>\n",
+       "      <td>1.316941</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>800009</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>public</td>\n",
+       "      <td>16.9691</td>\n",
+       "      <td>823</td>\n",
+       "      <td>19</td>\n",
+       "      <td>-0.560240</td>\n",
+       "      <td>0.655569</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12615</th>\n",
+       "      <td>97500358</td>\n",
+       "      <td>B-S-J-Z (China)</td>\n",
+       "      <td>public</td>\n",
+       "      <td>8.0786</td>\n",
+       "      <td>1131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.828180</td>\n",
+       "      <td>1.595021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12616</th>\n",
+       "      <td>97500359</td>\n",
+       "      <td>B-S-J-Z (China)</td>\n",
+       "      <td>public</td>\n",
+       "      <td>11.3202</td>\n",
+       "      <td>2298</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.178994</td>\n",
+       "      <td>0.251551</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12617</th>\n",
+       "      <td>97500360</td>\n",
+       "      <td>B-S-J-Z (China)</td>\n",
+       "      <td>public</td>\n",
+       "      <td>9.7932</td>\n",
+       "      <td>2605</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.190169</td>\n",
+       "      <td>0.743977</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12618</th>\n",
+       "      <td>97500361</td>\n",
+       "      <td>B-S-J-Z (China)</td>\n",
+       "      <td>public</td>\n",
+       "      <td>11.7941</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.929946</td>\n",
+       "      <td>-0.750143</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12619</th>\n",
+       "      <td>97500362</td>\n",
+       "      <td>B-S-J-Z (China)</td>\n",
+       "      <td>public</td>\n",
+       "      <td>15.4054</td>\n",
+       "      <td>2850</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.701873</td>\n",
+       "      <td>-0.445918</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12620 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CNTSCHID              CNT PRIVATESCH  STRATIO  SCHSIZE  sum_MATHbelow  \\\n",
+       "0        800004          Albania     public   9.7619      205             11   \n",
+       "1        800006          Albania     public  18.0000      315             15   \n",
+       "2        800007          Albania     public   4.7368       45              2   \n",
+       "3        800008          Albania    private  13.8125      221              6   \n",
+       "4        800009          Albania     public  16.9691      823             19   \n",
+       "...         ...              ...        ...      ...      ...            ...   \n",
+       "12615  97500358  B-S-J-Z (China)     public   8.0786     1131              0   \n",
+       "12616  97500359  B-S-J-Z (China)     public  11.3202     2298              0   \n",
+       "12617  97500360  B-S-J-Z (China)     public   9.7932     2605              0   \n",
+       "12618  97500361  B-S-J-Z (China)     public  11.7941     2005              3   \n",
+       "12619  97500362  B-S-J-Z (China)     public  15.4054     2850              1   \n",
+       "\n",
+       "       mean_ESCS  mean_ESCS_std  Y_MATH  Y_BIN_MATH  \n",
+       "0      -1.152958      -0.268234       5           1  \n",
+       "1      -1.343747      -0.565595       5           1  \n",
+       "2      -2.401967      -2.214922       4           1  \n",
+       "3      -0.135900       1.316941       3           1  \n",
+       "4      -0.560240       0.655569       2           0  \n",
+       "...          ...            ...     ...         ...  \n",
+       "12615   0.828180       1.595021       0           0  \n",
+       "12616  -0.178994       0.251551       0           0  \n",
+       "12617   0.190169       0.743977       0           0  \n",
+       "12618  -0.929946      -0.750143       0           0  \n",
+       "12619  -0.701873      -0.445918       0           0  \n",
+       "\n",
+       "[12620 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('data/df_level2.csv')\n",
     "df"
@@ -35,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +263,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                  Albania\n",
+       "1                Argentina\n",
+       "2                Australia\n",
+       "3          B-S-J-Z (China)\n",
+       "4        Baku (Azerbaijan)\n",
+       "5                   Brazil\n",
+       "6        Brunei Darussalam\n",
+       "7                    Chile\n",
+       "8           Chinese Taipei\n",
+       "9                 Colombia\n",
+       "10              Costa Rica\n",
+       "11                 Denmark\n",
+       "12      Dominican Republic\n",
+       "13                 Estonia\n",
+       "14                  France\n",
+       "15                 Georgia\n",
+       "16                  Greece\n",
+       "17               Indonesia\n",
+       "18                 Ireland\n",
+       "19                  Israel\n",
+       "20                   Italy\n",
+       "21                   Japan\n",
+       "22                  Jordan\n",
+       "23              Kazakhstan\n",
+       "24                 Lebanon\n",
+       "25               Lithuania\n",
+       "26              Luxembourg\n",
+       "27                Malaysia\n",
+       "28                   Malta\n",
+       "29                  Mexico\n",
+       "30                 Moldova\n",
+       "31                 Morocco\n",
+       "32                  Panama\n",
+       "33                    Peru\n",
+       "34             Philippines\n",
+       "35                  Poland\n",
+       "36                Portugal\n",
+       "37                   Qatar\n",
+       "38            Saudi Arabia\n",
+       "39               Singapore\n",
+       "40         Slovak Republic\n",
+       "41                   Spain\n",
+       "42                  Sweden\n",
+       "43             Switzerland\n",
+       "44                Thailand\n",
+       "45                  Turkey\n",
+       "46    United Arab Emirates\n",
+       "47          United Kingdom\n",
+       "48           United States\n",
+       "49                 Uruguay\n",
+       "Name: CNT, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#df.CNT.unique()\n",
     "df.groupby('CNT').count().reset_index()['CNT']\n",
@@ -200,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
