--- a/SPGLMM_simulation_study.ipynb
+++ b/SPGLMM_simulation_study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +102,12 @@
     }
    ],
    "source": [
-    "ran_var = False\n",
+    "ran_var = True\n",
     "ran_int = True\n",
     "n_fix = 1\n",
     "a_type = 't' # set 't' or 'alpha'\n",
     "tol = 0.5\n",
-    "model = 'P'  # set 'B' or 'P'\n",
+    "model = 'B'  # set 'B' or 'P'\n",
     "n = 1\n",
     "\n",
     "all_knots, all_par, all_W, all_hess_ran, all_hess_fix, all_group, all_out_groups = \\\n",
@@ -116,9 +116,52 @@
     "# save results\n",
     "file_name = str(ran_var) + '_' + str(ran_int) + '_' + str(n_fix) + '_' + a_type + '_' + str(\n",
     "    tol) + '_' + model + '_' + str(n) + '.pickle'\n",
-    "f = open('output/simulation_study_results' + file_name, 'wb')\n",
+    "f = open('output/simulation_study_results/' + file_name, 'wb')\n",
     "pickle.dump([all_knots, all_par, all_W, all_hess_ran, all_hess_fix, all_group, all_out_groups], f)\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[  6.61678,  13.45287],\n",
+       "        [  1.73391,   5.96037],\n",
+       "        [-11.25573,   0.77371],\n",
+       "        [-12.63224,  -1.54759]])]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_knots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-7.70887])]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_par"
    ]
   },
   {
@@ -145,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9 (default, Apr 13 2022, 08:48:06) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
